--- a/package.json
+++ b/package.json
@@ -44,31 +44,15 @@
     "configurations": {
       "ios.sim.debug": {
         "binaryPath": "ios/build/Build/Products/Debug-iphonesimulator/loginExample.app",
-        "build": "xcodebuild -project ios/loginExample.xcodeproj -scheme loginExample -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build -UseNewBuildSystem=NO",
+        "build": "xcodebuild -workspace ios/loginExample.xcworkspace -scheme loginExample -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build",
         "type": "ios.simulator",
-        "name": "iPhone 8"
+        "name": "iPhone 11 Pro"
       },
       "ios.sim.release": {
-        "binaryPath": "ios/build/Build/Products/Release-iphonesimulator/loginExample.app",
-        "build": "xcodebuild -project ios/loginExample.xcodeproj -scheme loginExample -configuration Release -sdk iphonesimulator -derivedDataPath ios/build -UseNewBuildSystem=NO",
+        "binaryPath": "./ios/build/Build/Products/Release-iphonesimulator/loginExample.app",
+        "build": "xcodebuild -workspace ios/loginExample.xcworkspace -configuration release -scheme loginExample -sdk iphonesimulator -derivedDataPath ios/build",
         "type": "ios.simulator",
-        "name": "iPhone 8"
-      },
-      "android.emu.debug": {
-        "binaryPath": "android/app/build/outputs/apk/debug/app-debug.apk",
-        "build": "cd android ; ./gradlew assembleDebug assembleAndroidTest -DtestBuildType=debug ; cd -",
-        "type": "android.emulator",
-        "device": {
-          "avdName": "Pixel_3_API_29"
-        }
-      },
-      "android.emu.release": {
-        "binaryPath": "android/app/build/outputs/apk/release/app-release.apk",
-        "build": "cd android ; ./gradlew assembleRelease assembleAndroidTest -DtestBuildType=release ; cd -",
-        "type": "android.emulator",
-        "device": {
-          "avdName": "Pixel_3_API_29"
-        }
+        "name": "iPhone 11 Pro"
       }
     }
   }
