--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -120,19 +120,29 @@ def jscFlavor = 'org.webkit:android-jsc:+'
 def enableHermes = project.ext.react.get("enableHermes", false);
 
 android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
+    compileSdkVersion 29
+    buildToolsVersion '29.0.0'
 
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
+    // compileSdkVersion rootProject.ext.compileSdkVersion
+
+    // compileOptions {
+    //     sourceCompatibility JavaVersion.VERSION_1_8
+    //     targetCompatibility JavaVersion.VERSION_1_8
+    // }
 
     defaultConfig {
         applicationId "com.loginexample"
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
+        minSdkVersion 18
+        targetSdkVersion 29
         versionCode 1
-        versionName "1.0"
+        versionName '1.0'
+        ndk {
+            abiFilters 'armeabi-v7a', 'x86', 'x86_64'
+        }
+        // minSdkVersion rootProject.ext.minSdkVersion
+        // targetSdkVersion rootProject.ext.targetSdkVersion
+        testBuildType System.getProperty('testBuildType', 'debug')
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
     splits {
         abi {
@@ -189,6 +199,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+     androidTestImplementation('com.wix:detox:+')
 }
 
 // Run this once to be able to run the application with BUCK
