--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "test:e2e:build": "detox build -c ios.sim.debug"
   },
   "dependencies": {
-    "react": "16.9.0",
-    "react-native": "0.61.5"
+    "react": "16.11.x",
+    "react-native": "0.62.x"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^0.0.7",
     "babel-jest": "^25.1.0",
-    "detox": "^15.2.0",
+    "detox": "^16.5.0",
     "eslint": "^6.8.0",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.58.0",
