--- a/package.json
+++ b/package.json
@@ -22,15 +22,8 @@
     "react-native": "0.62.x"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/runtime": "^7.8.4",
-    "@react-native-community/eslint-config": "^0.0.7",
-    "babel-jest": "^25.1.0",
-    "detox": "^16.5.0",
-    "eslint": "^6.8.0",
-    "jest": "^25.1.0",
-    "metro-react-native-babel-preset": "^0.58.0",
-    "react-test-renderer": "16.9.0"
+    "detox": "^17.3.2",
+    "jest": "^25.1.0"
   },
   "jest": {
     "preset": "react-native",
@@ -46,16 +39,21 @@
         "binaryPath": "ios/build/Build/Products/Debug-iphonesimulator/loginExample.app",
         "build": "xcodebuild -workspace ios/loginExample.xcworkspace -scheme loginExample -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build",
         "type": "ios.simulator",
-        "name": "iPhone 11 Pro"
+        "device": {
+          "type": "iPhone 11 Pro Max"
+        }
       },
       "ios.sim.release": {
         "binaryPath": "./ios/build/Build/Products/Release-iphonesimulator/loginExample.app",
         "build": "xcodebuild -workspace ios/loginExample.xcworkspace -configuration release -scheme loginExample -sdk iphonesimulator -derivedDataPath ios/build",
         "type": "ios.simulator",
-        "name": "iPhone 11 Pro"
+        "device": {
+          "type": "iPhone 11 Pro Max"
+        }
       },
       "android.emu.debug": {
         "binaryPath": "android/app/build/outputs/apk/debug/app-debug.apk",
+        "testBinaryPath": "android/app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk",
         "build": "cd android && ./gradlew assembleDebug assembleAndroidTest -DtestBuildType=debug && cd ..",
         "type": "android.emulator",
         "device": {
